--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -240,6 +240,9 @@ pypi-epiphan-dvi2pcie-duo:
     - ls -alh ./*.webm
     - rm -f ./*.mp4 ./*.avi ./*.webm
     # Epiphan DVI2PCIe Duo support (both OpenCV and Epiphan SDK)
+    # dummy var, to induce width_offset in test_realtime.py
+    # see definition of width_offset in test_realtime.py (Epiphan DVI2PCIe Duo tests)
+    - export USE_EPIPHANSDK=3
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
@@ -250,6 +253,7 @@ pypi-epiphan-dvi2pcie-duo:
     - ls -alh ./*.avi
     - ls -alh ./*.webm
     - rm -f ./*.mp4 ./*.avi ./*.webm
+    - unset USE_EPIPHANSDK  # remove dummy var
     - deactivate
   tags:
     - gift-linux
@@ -292,10 +296,14 @@ epiphan-dvi2pcie-duo:
     - check_epiphan_alive
     - ctest; exit_on_fail
     # Epiphan SDK
+    # dummy var, to induce width_offset in test_realtime.py
+    # see definition of width_offset in test_realtime.py (Epiphan DVI2PCIe Duo tests)
+    - export USE_EPIPHANSDK=3
     - cmake -D USE_EPIPHANSDK=ON -D ENABLE_NONFREE=ON .
     - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest; exit_on_fail
+    - unset USE_EPIPHANSDK  # remove dummy var
   tags:
     - gift-linux
     - gift-epiphan-dvi2pcie-duo
