--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -199,8 +199,8 @@ pypi-epiphan-dvi2pcie-duo:
     - ls -alh ./*.webm
     - rm -f ./*.mp4 ./*.avi ./*.webm
     # Epiphan DVI2PCIe Duo support (both OpenCV and Epiphan SDK)
-    # dummy var, to induce width_offset in test_realtime.py
-    # see definition of width_offset in test_realtime.py (Epiphan DVI2PCIe Duo tests)
+    # dummy var, to induce width_offset in test_epiphan_py_module.py
+    # see definition of width_offset in test_epiphan_py_module.py (Epiphan DVI2PCIe Duo tests)
     - export USE_EPIPHANSDK=3
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
@@ -218,7 +218,7 @@ pypi-epiphan-dvi2pcie-duo:
     - gift-pypi
     - gift-epiphan-dvi2pcie-duo
   only:
-    - 100-use-of-epiphansdk-after-libvlc-integrated
+    - 86-observer-pattern-for-video-sources
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 epiphan-dvi2pcie-duo:
@@ -254,8 +254,8 @@ epiphan-dvi2pcie-duo:
     - check_epiphan_alive
     - ctest; exit_on_fail
     # Epiphan SDK
-    # dummy var, to induce width_offset in test_realtime.py
-    # see definition of width_offset in test_realtime.py (Epiphan DVI2PCIe Duo tests)
+    # dummy var, to induce width_offset in test_epiphan_py_module.py
+    # see definition of width_offset in test_epiphan_py_module.py (Epiphan DVI2PCIe Duo tests)
     - export USE_EPIPHANSDK=3
     - cmake -D USE_EPIPHANSDK=ON -D ENABLE_NONFREE=ON .
     - make -j; exit_on_fail
@@ -266,4 +266,4 @@ epiphan-dvi2pcie-duo:
     - gift-linux
     - gift-epiphan-dvi2pcie-duo
   only:
-    - 100-use-of-epiphansdk-after-libvlc-integrated
+    - 86-observer-pattern-for-video-sources
