Issue #86: added IObserver, IObservable interfaces, and ObserverError exception type, as well as changed Observer to IObserver in test_observer.py

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -124,7 +124,9 @@ INCLUDE_DIRECTORIES(utils)
 # Variable for header and source files
 SET(HEADERS
     api/ivideosource.h
+    api/iobservable.h
     api/ivideotarget.h
+    api/iobserver.h
     api/videoframe.h
     api/maskframe.h
     api/factory.h
