Issue #86: dummy change to trigger new pristine build due to #87

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -29,6 +29,7 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
 
+# Commented out to test VideoFrame assignment operator
 # Both ports of Epiphan DVI2PCIe Duo using the observer pattern
 #foreach(COLOUR_SPACE ${COLOUR_SPACES})
 #    foreach(PORT ${PORTS})
