Issue #86: added BroadcastDaemon class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -127,6 +127,7 @@ SET(HEADERS
     api/iobservable.h
     api/ivideotarget.h
     api/iobserver.h
+    api/broadcastdaemon.h
     api/videoframe.h
     api/maskframe.h
     api/factory.h
