Issue #86: Python GIL locking mechanism protected by BUILD_PYTHON macro now to avoid using it when Python support not built

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -249,6 +249,7 @@ if(BUILD_PYTHON)
     ADD_SUBDIRECTORY(cmake/boost.python)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
+    ADD_DEFINITIONS(-DBUILD_PYTHON)
     INCLUDE_DIRECTORIES(python)
 
     SET(NAME_PYTHON py${NAME})
