Issue #86: revised inclusion of and linking against PythonLibs and Boost.Python in the light of needed Python GIL-related functionality in actual CPP lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -216,6 +216,19 @@ if(GENERATE_PERFORMANCE_OUTPUT)
     ADD_DEFINITIONS(-DGENERATE_PERFORMANCE_OUTPUT)
 endif(GENERATE_PERFORMANCE_OUTPUT)
 
+# Need to link against Python and Boost.Python
+# libs due to Python GIL
+if(BUILD_PYTHON)
+    ADD_SUBDIRECTORY(cmake/pythonlibs)
+    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
+    ADD_SUBDIRECTORY(cmake/boost.python)
+    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
+    LIST(APPEND LIBS ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
+
+    ADD_DEFINITIONS(-DBUILD_PYTHON)
+    INCLUDE_DIRECTORIES(python)
+endif(BUILD_PYTHON)
+
 # Compile and link
 ADD_LIBRARY(${NAME} SHARED ${HEADERS} ${SOURCES})
 TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
@@ -246,14 +259,6 @@ endif(BUILD_TESTS)
 
 # Python wrappers
 if(BUILD_PYTHON)
-    ADD_SUBDIRECTORY(cmake/pythonlibs)
-    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
-    ADD_SUBDIRECTORY(cmake/boost.python)
-    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
-
-    ADD_DEFINITIONS(-DBUILD_PYTHON)
-    INCLUDE_DIRECTORIES(python)
-
     SET(NAME_PYTHON py${NAME})
     ADD_LIBRARY(${NAME_PYTHON} SHARED python/gil.h python/wrapper.cpp)
     TARGET_LINK_LIBRARIES(${NAME_PYTHON} ${Boost_LIBRARIES} ${NAME})
