--- a/src/cmake/pythonlibs/CMakeLists.txt
+++ b/src/cmake/pythonlibs/CMakeLists.txt
@@ -4,3 +4,6 @@ FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
 SET(PYTHON_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS}
     CACHE INTERNAL "PythonLibs include dirs"
 )
+SET(PYTHON_LIBRARIES ${PYTHON_LIBRARIES}
+    CACHE INTERNAL "PythonLibs libraries"
+)
