Issue #86: only 40 fps supported with Epiphan SDK: frame-rate reduced for tests, also documented in README

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -34,7 +34,11 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     foreach(PORT ${PORTS})
         SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_ObserverPattern_${PORT}_${COLOUR_SPACE})
         if(COLOUR_SPACE STREQUAL "I420")
-            SET(FRAME_RATE 60)
+            if(USE_EPIPHANSDK)
+                SET(FRAME_RATE 40)
+            elseif(USE_LIBVLC)
+                SET(FRAME_RATE 60)
+            endif(USE_EPIPHANSDK)
         elseif(COLOUR_SPACE STREQUAL "BGRA")
             SET(FRAME_RATE 30)
         endif(COLOUR_SPACE STREQUAL "I420")
