--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -219,6 +219,7 @@ pypi-epiphan-dvi2pcie-duo:
     - gift-epiphan-dvi2pcie-duo
   only:
     - 86-observer-pattern-for-video-sources
+    - 86-observer-pattern-for-video-sources-observers-as-pointers
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 epiphan-dvi2pcie-duo:
@@ -267,3 +268,4 @@ epiphan-dvi2pcie-duo:
     - gift-epiphan-dvi2pcie-duo
   only:
     - 86-observer-pattern-for-video-sources
+    - 86-observer-pattern-for-video-sources-observers-as-pointers
