Issue #86: Disabled the Python module tests (both CMake and PyPI) until issue #114 is resolved

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -20,14 +20,15 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     endforeach(PORT)
 endforeach(COLOUR_SPACE)
 
-# Both ports of Epiphan DVI2PCIe Duo using the Epiphan Python module
-foreach(COLOUR_SPACE ${COLOUR_SPACES})
-    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_PyModule_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --colour-space=${COLOUR_SPACE} --config-dir=${CONFIG_DIR} test_epiphan_py_module.py
-    )
-    LIST(APPEND TESTS_LIST ${NAME_TEST})
-endforeach(COLOUR_SPACE)
+# Disabled the Python module tests until issue #114 is resolved
+## Both ports of Epiphan DVI2PCIe Duo using the Epiphan Python module
+#foreach(COLOUR_SPACE ${COLOUR_SPACES})
+#    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_PyModule_${COLOUR_SPACE})
+#    ADD_TEST(NAME ${NAME_TEST}
+#        COMMAND py.test --colour-space=${COLOUR_SPACE} --config-dir=${CONFIG_DIR} test_epiphan_py_module.py
+#    )
+#    LIST(APPEND TESTS_LIST ${NAME_TEST})
+#endforeach(COLOUR_SPACE)
 
 # Both ports of Epiphan DVI2PCIe Duo using the observer pattern
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
