--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,7 +162,8 @@ pypi-epiphan-dvi2pcie-duo:
     - pip install pytest
     # Epiphan DVI2PCIe Duo support (OpenCV only)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-i420" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
+    # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
+    # - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
     - edd-dvi-bgra-hevc; exit_on_fail
     - edd-sdi-bgra-hevc; exit_on_fail
     - edd-dvi-bgra-xvid; exit_on_fail
@@ -183,7 +184,8 @@ pypi-epiphan-dvi2pcie-duo:
     - rm -f ./*.mp4 ./*.avi ./*.webm
     # Epiphan DVI2PCIe Duo support (both OpenCV and libVLC)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
+    # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
+    # - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
     - edd-dvi-bgra-hevc; exit_on_fail
     - edd-sdi-bgra-hevc; exit_on_fail
     - edd-dvi-bgra-xvid; exit_on_fail
