--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,16 +164,17 @@ pypi-epiphan-dvi2pcie-duo:
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-i420" --upgrade "$PyPI_INSTALLER"
     # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
     # - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
-    - edd-dvi-bgra-hevc; exit_on_fail
-    - edd-sdi-bgra-hevc; exit_on_fail
-    - edd-dvi-bgra-xvid; exit_on_fail
-    - edd-sdi-bgra-xvid; exit_on_fail
-    - edd-dvi-bgra-vp9; exit_on_fail
-    - edd-sdi-bgra-vp9; exit_on_fail
+    # - edd-dvi-bgra-hevc; exit_on_fail
+    # - edd-sdi-bgra-hevc; exit_on_fail
+    # - edd-dvi-bgra-xvid; exit_on_fail
+    # - edd-sdi-bgra-xvid; exit_on_fail
+    # - edd-dvi-bgra-vp9; exit_on_fail
+    # - edd-sdi-bgra-vp9; exit_on_fail
     # Epiphan DVI2PCIe Duo support (libVLC only)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
     # TODO: issue #102
     # - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
+    # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
     - edd-dvi-i420-hevc; exit_on_fail
     - edd-sdi-i420-hevc; exit_on_fail
     - edd-dvi-i420-vp9; exit_on_fail
@@ -186,12 +187,12 @@ pypi-epiphan-dvi2pcie-duo:
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
     # - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
-    - edd-dvi-bgra-hevc; exit_on_fail
-    - edd-sdi-bgra-hevc; exit_on_fail
-    - edd-dvi-bgra-xvid; exit_on_fail
-    - edd-sdi-bgra-xvid; exit_on_fail
-    - edd-dvi-bgra-vp9; exit_on_fail
-    - edd-sdi-bgra-vp9; exit_on_fail
+    # - edd-dvi-bgra-hevc; exit_on_fail
+    # - edd-sdi-bgra-hevc; exit_on_fail
+    # - edd-dvi-bgra-xvid; exit_on_fail
+    # - edd-sdi-bgra-xvid; exit_on_fail
+    # - edd-dvi-bgra-vp9; exit_on_fail
+    # - edd-sdi-bgra-vp9; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
     - edd-sdi-i420-hevc; exit_on_fail
     - edd-dvi-i420-vp9; exit_on_fail
