Issue #121: activated VideoSourceFactory test suite in CMake file

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -1,4 +1,5 @@
 FILE(COPY
+    ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test_video_source_factory.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test_unit.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test_epiphan_py_module.py
     ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/test_observer.py
@@ -7,9 +8,19 @@ FILE(COPY
 )
 SET(CONFIG_DIR ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/data)
 
-# SDI and DVI ports on their own
 LIST(APPEND PORTS SDI)
 LIST(APPEND PORTS DVI)
+
+# VideoSourceFactory
+foreach(COLOUR_SPACE ${COLOUR_SPACES})
+    SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_VideoSourceFactory_${COLOUR_SPACE})
+    ADD_TEST(NAME ${NAME_TEST}
+        COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_video_source_factory.py
+    )
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
+endforeach(COLOUR_SPACE)
+
+# SDI and DVI ports on their own
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     foreach(PORT ${PORTS})
         SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE})
