Issue #121: excluded VideoSourceFactory tests from single colour space tests (as VideoSourceFactory tests require both colour spaces)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -245,13 +245,15 @@ epiphan-dvi2pcie-duo:
     - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D USE_I420=OFF -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON -D ENABLE_NONFREE=ON "$GiftGrab_SOURCE_DIR"
     - make -j; exit_on_fail
     - check_epiphan_alive
-    - ctest; exit_on_fail
+    # -E => excluding VideoSourceFactory tests
+    - ctest -E Epiphan_DVI2PCIeDuo_VideoSourceFactory; exit_on_fail
     # test I420 colour space
     - cmake -D USE_BGRA=OFF -D USE_I420=ON .
     - make -j; exit_on_fail
     - check_epiphan_alive
-    - ctest; exit_on_fail
-    # test both colour spaces
+    # -E => excluding VideoSourceFactory tests
+    - ctest -E Epiphan_DVI2PCIeDuo_VideoSourceFactory; exit_on_fail
+    # test VideoSourceFactory (needs both colour spaces enabled)
     - cmake -D USE_BGRA=ON -D USE_I420=ON .
     - make -j; exit_on_fail
     - check_epiphan_alive
