Issue #122: moved Catch configuration in CMake files one level higher for the imminent introduction of VideoSourceTarget tests

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -2,6 +2,33 @@
 SET(PYTHONPATH "${CMAKE_BINARY_DIR}:$ENV{PYTHONPATH}")
 SET(PYTHONPATH "${CMAKE_SOURCE_DIR}/python/modules:${PYTHONPATH}")
 
+# Obtain Catch header for testing
+SET(CATCH_DIR "${CMAKE_BINARY_DIR}/extern/Catch")
+SET(CATCH_HEADER_URL
+    "https://raw.githubusercontent.com/philsquared/Catch/v1.5.8/single_include/catch.hpp"
+)
+FILE(DOWNLOAD
+     ${CATCH_HEADER_URL}
+     "${CATCH_DIR}/catch.hpp"
+     SHOW_PROGRESS STATUS CATCH_HEADER_DOWNLOAD_STATUS
+)
+LIST(GET CATCH_HEADER_DOWNLOAD_STATUS 0 1
+     CATCH_HEADER_DOWNLOAD_STATUS_EXIT_CODE
+     CATCH_HEADER_DOWNLOAD_STATUS_ERROR_STRING
+)
+if(CATCH_HEADER_DOWNLOAD_STATUS_EXIT_CODE)  # not-zero exit code => error!
+    MESSAGE(
+        "Catch is needed for the tests, but could not download the Catch header"
+    )
+    MESSAGE(
+        "The URL was: ${CATCH_HEADER_URL}"
+    )
+    MESSAGE(FATAL_ERROR
+        "The error was: ${CATCH_HEADER_DOWNLOAD_STATUS_ERROR_STRING}"
+    )
+endif(CATCH_HEADER_DOWNLOAD_STATUS_EXIT_CODE)
+INCLUDE_DIRECTORIES(${CATCH_DIR})
+
 # set colour space
 if(USE_BGRA)
     LIST(APPEND COLOUR_SPACES BGRA)
