Issue #122: added skeleton for VideoTargetFactory class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -134,6 +134,7 @@ SET(HEADERS
     api/storage.h
     api/factory.h
     api/videosourcefactory.h
+    api/videotargetfactory.h
     api/except.h
 )
 SET(SOURCES
@@ -143,6 +144,7 @@ SET(SOURCES
     api/maskframe.cpp
     api/factory.cpp
     api/videosourcefactory.cpp
+    api/videotargetfactory.cpp
     api/except.cpp
 )
 
