Issue #132: Boost.Python CMake file looks for Boost.NumPy as well, conditional on the USE_NUMPY flag

--- a/src/cmake/boost.python/CMakeLists.txt
+++ b/src/cmake/boost.python/CMakeLists.txt
@@ -1,6 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
-FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
+SET(GG_BOOST_COMPONENTS python)
+if(USE_NUMPY)
+    LIST(APPEND GG_BOOST_COMPONENTS numpy)
+endif(USE_NUMPY)
+FIND_PACKAGE(Boost COMPONENTS ${GG_BOOST_COMPONENTS} REQUIRED)
 SET(Boost_INCLUDE_DIR ${Boost_INCLUDE_DIR}
     CACHE INTERNAL "Boost.Python include dirs"
 )
