Issue #132: defining USE_NUMPY macro in main CMake file for use within code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -232,6 +232,9 @@ if(BUILD_PYTHON)
     LIST(APPEND LIBS ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
 
     ADD_DEFINITIONS(-DBUILD_PYTHON)
+    if(USE_NUMPY)
+        ADD_DEFINITIONS(-DUSE_NUMPY)
+    endif(USE_NUMPY)
     INCLUDE_DIRECTORIES(python)
 endif(BUILD_PYTHON)
 
