Revert "Issue #132: removed quotes around BOOST_163_ROOT_DIR when exporting BOOST_ROOT"
This reverts commit 1f50d6a98c22830b52c19c5745036b20f9b73bad.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ linux:
     - make install
     # NumPy support
     # TODO: delete this line after issue #133
-    - export BOOST_ROOT=$BOOST_163_ROOT_DIR
+    - export BOOST_ROOT="$BOOST_163_ROOT_DIR"
     - cmake -D USE_NUMPY=ON .
     - make -j; exit_on_fail
     - ctest; exit_on_fail
