--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -292,6 +292,11 @@ epiphan-dvi2pcie-duo:
     - make -j; exit_on_fail
     - check_epiphan_alive
     - ctest; exit_on_fail
+    # NumPy support
+    # TODO: remove BOOST_ROOT parameter after issue #133
+    - cmake -D BOOST_ROOT="$BOOST_163_ROOT_DIR" -D USE_NUMPY=ON .
+    - make -j; exit_on_fail
+    - ctest; exit_on_fail
     - unset USE_EPIPHANSDK  # remove dummy var
   tags:
     - gift-linux
