Issue #85: added USE_NETWORK_SOURCES option to CMake configuration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,8 @@ ADD_SUBDIRECTORY(cmake/cpp11)
 # Configurable options, depending on desired functionality
 OPTION(USE_EPIPHAN_DVI2PCIE_DUO
     "Capture video with Epiphan DVI2PCIe Duo" OFF)
+OPTION(USE_NETWORK_SOURCES
+    "Capture video from network sources (requires libVLC)" OFF)
 OPTION(USE_HEVC
     "Video encoding with HEVC (requires FFmpeg, pkg-config and kvazaar [default] or x265 [turn USE_X265 on])" OFF)
 OPTION(USE_X265
@@ -105,11 +107,16 @@ if((USE_EPIPHAN_DVI2PCIE_DUO AND USE_BGRA) OR
     SET(USE_OPENCV ON CACHE BOOL "OFF ON" FORCE)
 endif()
 
+# Determine whether VLC needed
 if(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
     if(NOT USE_EPIPHANSDK)
         SET(USE_LIBVLC ON CACHE BOOL "OFF ON" FORCE)
     endif(NOT USE_EPIPHANSDK)
 endif(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
+
+if(USE_NETWORK_STREAMS)
+    SET(USE_LIBVLC ON CACHE BOOL "OFF ON" FORCE)
+endif(USE_NETWORK_STREAMS)
 
 # Determine whether FFmpeg needed
 if(USE_HEVC OR USE_VP9)
