Issue #85: implemented test_frame_rate for network sources

--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -36,7 +36,7 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${FRAME_RATE}fps)
 
     ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --frame-rate=${NETWORK_SOURCE_FRAME_RATE} test_observer.py
+        COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --frame-rate=${NETWORK_SOURCE_FRAME_RATE} --observers=3 test_observer.py
     )
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
