--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,9 +114,9 @@ if(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
     endif(NOT USE_EPIPHANSDK)
 endif(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
 
-if(USE_NETWORK_STREAMS)
+if(USE_NETWORK_SOURCES)
     SET(USE_LIBVLC ON CACHE BOOL "OFF ON" FORCE)
-endif(USE_NETWORK_STREAMS)
+endif(USE_NETWORK_SOURCES)
 
 # Determine whether FFmpeg needed
 if(USE_HEVC OR USE_VP9)
