Issue #85: fixed network source frame rate setting in CTest configuration

--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -33,7 +33,7 @@ endforeach(COLOUR_SPACE)
 
 # Network source using the observer pattern
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
-    SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${FRAME_RATE}fps)
+    SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${NETWORK_SOURCE_FRAME_RATE}fps)
 
     ADD_TEST(NAME ${NAME_TEST}
         COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --frame-rate=${NETWORK_SOURCE_FRAME_RATE} --observers=3 test_observer.py
