Issue #85: fixed passing of network source address to VideoSourceFactory tests of network sources

--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -17,7 +17,7 @@ TARGET_LINK_LIBRARIES(
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Network_VideoSourceFactory_${COLOUR_SPACE})
     ADD_TEST(NAME ${NAME_TEST}
-        COMMAND ${VIDEO_SOURCE_FACTORY_TEST} --address=${NETWORK_SOURCE} ${COLOUR_SPACE}
+        COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${NETWORK_SOURCE_ADDRESS} ${COLOUR_SPACE}
     )
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
