--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -400,32 +400,29 @@ pypi-epiphan-pearl:
     - this-branch-does-not-exist
 
 ################## Device: Epiphan Pearl ##################
-epiphan-pearl:
+network-sources:
   stage: test_cmake
   script:
     # prepare environment
-    - export GiftGrab_BUILD_DIR="$SCRATCH_DIR/build/GiftGrab-epiphan-pearl"
-    - export INSTALL_DIR="$SCRATCH_DIR/install-epiphan-pearl"
+    - export GiftGrab_BUILD_DIR="$SCRATCH_DIR/build/GiftGrab-network-sources"
+    - export INSTALL_DIR="$SCRATCH_DIR/install-network-sources"
     - rm -rf "$GiftGrab_BUILD_DIR"
     - mkdir -p "$GiftGrab_BUILD_DIR"
     - cd "$GiftGrab_BUILD_DIR"
     - export EPIPHAN_PEARL_IP="128.16.14.129"
-    - export EPIPHAN_PEARL_MRL="rtsp://$EPIPHAN_PEARL_IP:554/stream.sdp"
-    # test BGRA colour space TODO #85
-    - cmake -D USE_EPIPHAN_PEARL=ON -D USE_I420=OFF -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON "$GiftGrab_SOURCE_DIR"
-    # - make -j; exit_on_fail
-    # - check_epiphan_pearl_alive
-    # - ctest; exit_on_fail
+    - export EPIPHAN_PEARL_MRL="rtsp://$EPIPHAN_PEARL_IP:555/stream.sdp"
     # test I420 colour space
-    - cmake -D USE_BGRA=OFF -D USE_I420=ON .
+    - cmake -D NETWORK_SOURCE_ADDRESS=$EPIPHAN_PEARL_MRL -D NETWORK_SOURCE_FRAME_RATE=10 -D NETWORK_SOURCE_DELAY=7 -D USE_NETWORK_SOURCES=ON -D USE_BGRA=OFF -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON -D ENABLE_NONFREE=ON "$GiftGrab_SOURCE_DIR"
     - make -j; exit_on_fail
-    - check_epiphan_pearl_alive
+    - ctest; exit_on_fail
+    # test BGRA colour space
+    - cmake -D USE_BGRA=ON -D USE_I420=OFF .
+    - make -j; exit_on_fail
     - ctest; exit_on_fail
     # test both colour spaces TODO #85
-    # - cmake -D USE_BGRA=ON -D USE_I420=ON .
-    # - make -j; exit_on_fail
-    # - check_epiphan_pearl_alive
-    # - ctest; exit_on_fail
+    - cmake -D USE_BGRA=ON -D USE_I420=ON .
+    - make -j; exit_on_fail
+    - ctest; exit_on_fail
   tags:
     - gift-linux
     - gift-epiphan-pearl
