Issue #85: put quotes around the 0 in NETWORK_SOURCE_DELAY_VALUE setting in network tests CMake file

--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -33,7 +33,7 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     if(COLOUR_SPACE STREQUAL "I420")
         SET(NETWORK_SOURCE_DELAY_VALUE ${NETWORK_SOURCE_DELAY})
     elseif(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_VALUE 0)
+        SET(NETWORK_SOURCE_DELAY_VALUE "0")
     endif(COLOUR_SPACE STREQUAL "I420")
 
     SET(NAME_TEST Test_Network_${COLOUR_SPACE})
@@ -49,7 +49,7 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     if(COLOUR_SPACE STREQUAL "I420")
         SET(NETWORK_SOURCE_DELAY_VALUE ${NETWORK_SOURCE_DELAY})
     elseif(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_VALUE 0)
+        SET(NETWORK_SOURCE_DELAY_VALUE "0")
     endif(COLOUR_SPACE STREQUAL "I420")
 
     SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${NETWORK_SOURCE_FRAME_RATE}fps)
