--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -32,8 +32,8 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     # This is due to issue #135
     if(COLOUR_SPACE STREQUAL "I420")
         SET(NETWORK_SOURCE_DELAY_VALUE ${NETWORK_SOURCE_DELAY})
-    elseif(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_VALUE "0")
+    else(COLOUR_SPACE STREQUAL "I420")
+        SET(NETWORK_SOURCE_DELAY_VALUE 0)
     endif(COLOUR_SPACE STREQUAL "I420")
 
     SET(NAME_TEST Test_Network_${COLOUR_SPACE})
@@ -48,8 +48,8 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     # This is due to issue #135
     if(COLOUR_SPACE STREQUAL "I420")
         SET(NETWORK_SOURCE_DELAY_VALUE ${NETWORK_SOURCE_DELAY})
-    elseif(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_VALUE "0")
+    else(COLOUR_SPACE STREQUAL "I420")
+        SET(NETWORK_SOURCE_DELAY_VALUE 0)
     endif(COLOUR_SPACE STREQUAL "I420")
 
     SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${NETWORK_SOURCE_FRAME_RATE}fps)
