Issue #85: renamed NETWORK_SOURCE_DELAY => TESTING_NETWORK_SOURCE_DELAY

--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -17,7 +17,7 @@ TARGET_LINK_LIBRARIES(
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     # This is due to issue #135
     if(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_PARAM ${NETWORK_SOURCE_DELAY})
+        SET(NETWORK_SOURCE_DELAY_PARAM ${TESTING_NETWORK_SOURCE_DELAY})
     endif(COLOUR_SPACE STREQUAL "I420")
 
     SET(NAME_TEST Test_Network_VideoSourceFactory_${COLOUR_SPACE})
@@ -31,7 +31,7 @@ endforeach(COLOUR_SPACE)
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     # This is due to issue #135
     if(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_VALUE ${NETWORK_SOURCE_DELAY})
+        SET(NETWORK_SOURCE_DELAY_VALUE ${TESTING_NETWORK_SOURCE_DELAY})
     else(COLOUR_SPACE STREQUAL "I420")
         SET(NETWORK_SOURCE_DELAY_VALUE 0)
     endif(COLOUR_SPACE STREQUAL "I420")
@@ -47,7 +47,7 @@ endforeach(COLOUR_SPACE)
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     # This is due to issue #135
     if(COLOUR_SPACE STREQUAL "I420")
-        SET(NETWORK_SOURCE_DELAY_VALUE ${NETWORK_SOURCE_DELAY})
+        SET(NETWORK_SOURCE_DELAY_VALUE ${TESTING_NETWORK_SOURCE_DELAY})
     else(COLOUR_SPACE STREQUAL "I420")
         SET(NETWORK_SOURCE_DELAY_VALUE 0)
     endif(COLOUR_SPACE STREQUAL "I420")
