Issue #85: renamed NETWORK_SOURCE_ADDRESS => TESTING_NETWORK_SOURCE_ADDRESS

--- a/src/tests/network/CMakeLists.txt
+++ b/src/tests/network/CMakeLists.txt
@@ -22,7 +22,7 @@ TARGET_LINK_LIBRARIES(
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Network_VideoSourceFactory_${COLOUR_SPACE})
     ADD_TEST(NAME ${NAME_TEST}
-        COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${NETWORK_SOURCE_ADDRESS} ${COLOUR_SPACE} ${TESTING_NETWORK_SOURCE_DELAY}
+        COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${TESTING_NETWORK_SOURCE_ADDRESS} ${COLOUR_SPACE} ${TESTING_NETWORK_SOURCE_DELAY}
     )
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
@@ -31,7 +31,7 @@ endforeach(COLOUR_SPACE)
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Network_${COLOUR_SPACE})
     ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --init-delay=${TESTING_NETWORK_SOURCE_DELAY} test_unit.py
+        COMMAND py.test --address=${TESTING_NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --init-delay=${TESTING_NETWORK_SOURCE_DELAY} test_unit.py
     )
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
@@ -41,7 +41,7 @@ foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Network_ObserverPattern_${COLOUR_SPACE}_${TESTING_NETWORK_SOURCE_FRAME_RATE}fps)
 
     ADD_TEST(NAME ${NAME_TEST}
-        COMMAND py.test --address=${NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --frame-rate=${TESTING_NETWORK_SOURCE_FRAME_RATE} --observers=3 --init-delay=${TESTING_NETWORK_SOURCE_DELAY} test_observer.py
+        COMMAND py.test --address=${TESTING_NETWORK_SOURCE_ADDRESS} --colour-space=${COLOUR_SPACE} --frame-rate=${TESTING_NETWORK_SOURCE_FRAME_RATE} --observers=3 --init-delay=${TESTING_NETWORK_SOURCE_DELAY} test_observer.py
     )
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 endforeach(COLOUR_SPACE)
